Adjusted coloring, fixed uneveness of core concept circle

--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -195,6 +195,8 @@ html {
     --navbar-background-color: black;
     --timeline-line-color: white;
     --socials-icon-color: white;
+
+    --bubbles-background-color: #1A1A1A;
 }
 
 
