--- a/stylesheets/individual_projects/content_placement_solo_baila.css
+++ b/stylesheets/individual_projects/content_placement_solo_baila.css
@@ -1,32 +1,30 @@
+
+/*
+    Core concept div
+*/
 .bubble:nth-child(1) {
     grid-column: 1 / 4;
     /* Place in column 1 */
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     /* Place in row 1 */
 }
 
+
+/*
+    Start screen image div
+*/
 .bubble:nth-child(2) {
     grid-column: 8 / 15;
-    grid-row: 2 / 5;
+    grid-row: 2 / 6;
 }
 
+
+/*
+    First text div
+*/
 .bubble:nth-child(3) {
     grid-column: 2 / 7;
     grid-row: 4 / 6;
 }
 
 
-.bubble:nth-child(4) {
-    grid-column: 8 / 14;
-    grid-row: 6 / 8;
-}
-
-.bubble:nth-child(5) {
-    grid-column: 9 / 15;
-    grid-row: 9 / 11;
-}
-
-.bubble:nth-child(6) {
-    grid-column: 1 / 8;
-    grid-row: 8 / 11;
-}
