--- a/stylesheets/individual_projects/individual_projects.css
+++ b/stylesheets/individual_projects/individual_projects.css
@@ -1,8 +1,8 @@
 .text_bubble_div {
     width: auto;
     border-radius: 40px;
-    border: 3px solid black;
-    background-color: black;
+    border: 3px solid var(--bubbles-background-color);
+    background-color: var(--bubbles-background-color);
 
     
     display: flex; /* Use flexbox */
@@ -12,14 +12,17 @@
     font-size: 1.25vw;
     text-align: center;
     overflow: hidden;
+    padding: 0;
 }
 
 
 .text_bubble_div_title {
     width: auto;
+    aspect-ratio: 1;
     border-radius: 50%;
-    border: 3px solid black;
-    background-color: black;
+    border: 3px solid var(--bubbles-background-color);
+    background-color: var(--bubbles-background-color);
+    padding: 0;
 
     display: flex;
     align-items: center;
@@ -31,8 +34,8 @@
 
 
 .image_bubble_div {
-    border-radius: 80px;
-    border: 3px solid black;
+    border-radius: 40px;
+    border: 3px solid var(--bubbles-background-color);
     display: block; /* Use block instead of inline-block to make it behave correctly within grid */
     overflow: hidden; /* Clips the image to match the border radius */
     width: 100%; /* Take full width of assigned grid space */
@@ -86,11 +89,14 @@
     .text_bubble_div_title {
         font-size: 8vw;
         margin-bottom: 5%;
+        height: auto;
+        aspect-ratio: unset;
     }
 
 
     .text_bubble_div {
         font-size: 3vw;
         margin-bottom: 5%;
+        height: auto;
     }
 }
